[package]
authors = ["Hollow Man <hollowman@opensuse.org>"]
categories = ["text-processing", "command-line-interface"]
description = "A backend for mdBook written in Rust for generating PDF based on headless chrome and Chrome DevTools Protocol"
edition = "2021"
homepage = "https://hollowmansblog.wordpress.com/2022/01/30/mdbook-pdf-a-mdbook-backend-for-generating-pdf-files/"
keywords = ["book", "mdbook", "rustbook", "pdf"]
license = "GPL-3.0"
name = "mdbook-pdf"
readme = "README.md"
repository = "https://github.com/HollowMan6/mdbook-pdf"
version = "0.1.8"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
env_logger = "0"
lazy_static = "1"
mdbook = "0"
headless_chrome = "1"
regex = "1"
serde = "1"
serde_derive = "1"

[features]
# Enables auto fetching chromium support.
fetch = ["headless_chrome/fetch"]
